--- a/apps/demo-angular/tsconfig.json
+++ b/apps/demo-angular/tsconfig.json
@@ -10,11 +10,11 @@
       "~/*": [
         "src/*"
       ],
-      "@nativescript/*": [
-        "../../dist/packages/*"
-      ],
       "@demo/shared": [
         "../../tools/demo/index.ts"
+      ],
+      "@cloudhx/*": [
+        "../../dist/packages/*"
       ]
     }
   },
