--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,7 @@
       "@demo/shared": [
         "tools/demo/index.ts"
       ],
-      "@cloudhx/*": [
+      "@nordsense/*": [
         "packages/*"
       ]
     }
