--- a/apps/demo-angular/tsconfig.json
+++ b/apps/demo-angular/tsconfig.json
@@ -15,6 +15,9 @@
       ],
       "@cloudhx/*": [
         "../../dist/packages/*"
+      ],
+      "@nordsense/*": [
+        "../../dist/packages/*"
       ]
     }
   },
