--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -15,6 +15,9 @@
       ],
       "@cloudhx/*": [
         "../../packages/*"
+      ],
+      "@nordsense/*": [
+        "../../packages/*"
       ]
     }
   }
