--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,9 @@
       ],
       "@cloudhx/*": [
         "packages/*"
+      ],
+      "@nordsense/*": [
+        "packages/*"
       ]
     }
   },
