--- a/tools/demo/tsconfig.json
+++ b/tools/demo/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "@cloudhx/*": [
         "../../packages/*"
+      ],
+      "@nordsense/*": [
+        "../../packages/*"
       ]
     }
   }
