--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,6 @@
-registry=https://npm.pkg.github.com/nordsense
+# Use NPM as the default registry
+registry=https://registry.npmjs.org/
+
+# Use GitHub Package Registry for packages part of the `nordsense` scope
+@nordsense:registry=https://npm.pkg.github.com/nordsense
+//npm.pkg.github.com/:_authToken=${GHPR_NPM_TOKEN}
