update npmrc and publish package

--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,9 @@
+# For installing
 # Use NPM as the default registry
-registry=https://registry.npmjs.org/
+#registry=https://registry.npmjs.org/
 
 # Use GitHub Package Registry for packages part of the `nordsense` scope
-@nordsense:registry=https://npm.pkg.github.com/nordsense
-//npm.pkg.github.com/:_authToken=${GHPR_NPM_TOKEN}
+#@nordsense:registry=https://npm.pkg.github.com/nordsense
+#//npm.pkg.github.com/:_authToken=${GHPR_NPM_TOKEN}
+# For publishing
+registry=https://npm.pkg.github.com/nordsense
